@@ -44,7 +44,7 @@ import org.gjt.sp.util.Log;
 /**
  * The main class of the VFS browser.
  * @author Slava Pestov
- * @version $Id: VFSBrowser.java,v 1.23 2002/01/05 03:26:28 spestov Exp $
+ * @version $Id: VFSBrowser.java,v 1.24 2002/01/14 04:22:30 spestov Exp $
  */
 public class VFSBrowser extends JPanel implements EBComponent
 {
@@ -800,7 +800,7 @@ public class VFSBrowser extends JPanel implements EBComponent
 	} //}}}
 
 	//{{{ filesActivated() method
-	void filesActivated()
+	void filesActivated(boolean newView)
 	{
 		VFS.DirectoryEntry[] selectedFiles = browserView.getSelectedFiles();
 
@@ -824,7 +824,7 @@ public class VFSBrowser extends JPanel implements EBComponent
 
 				if(buffer != null)
 				{
-					if(view == null)
+					if(newView)
 						view = jEdit.newView(null,buffer);
 					else
 						view.setBuffer(buffer);
